@@ -6,8 +6,6 @@ import com.gregtechceu.gtceu.api.GTValues;
 import com.gregtechceu.gtceu.api.cover.filter.*;
 import com.gregtechceu.gtceu.api.data.chemical.ChemicalHelper;
 import com.gregtechceu.gtceu.api.data.chemical.material.ItemMaterialData;
-import com.gregtechceu.gtceu.api.data.chemical.material.MarkerMaterial;
-import com.gregtechceu.gtceu.api.data.chemical.material.MarkerMaterials;
 import com.gregtechceu.gtceu.api.data.chemical.material.Material;
 import com.gregtechceu.gtceu.api.data.chemical.material.properties.PropertyKey;
 import com.gregtechceu.gtceu.api.data.chemical.material.stack.ItemMaterialInfo;
@@ -22,6 +20,8 @@ import com.gregtechceu.gtceu.api.item.armor.ArmorComponentItem;
 import com.gregtechceu.gtceu.api.item.component.*;
 import com.gregtechceu.gtceu.api.item.component.prospector.ProspectorMode;
 import com.gregtechceu.gtceu.api.item.tool.MaterialToolTier;
+import com.gregtechceu.gtceu.common.cover.ConveyorCover;
+import com.gregtechceu.gtceu.common.cover.PumpCover;
 import com.gregtechceu.gtceu.common.data.materials.GTFoods;
 import com.gregtechceu.gtceu.common.entity.GTBoat;
 import com.gregtechceu.gtceu.common.item.*;
@@ -50,6 +50,7 @@ import net.minecraft.world.InteractionResult;
 import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.food.FoodProperties;
+import net.minecraft.world.food.Foods;
 import net.minecraft.world.item.*;
 import net.minecraft.world.level.ItemLike;
 import net.minecraft.world.level.block.LayeredCauldronBlock;
@@ -72,6 +73,7 @@ import com.tterrag.registrate.util.entry.ItemEntry;
 import com.tterrag.registrate.util.nullness.NonNullBiConsumer;
 import com.tterrag.registrate.util.nullness.NonNullConsumer;
 import com.tterrag.registrate.util.nullness.NonNullFunction;
+import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.*;
@@ -82,6 +84,7 @@ import static com.gregtechceu.gtceu.common.data.models.GTModels.*;
 import static com.gregtechceu.gtceu.common.registry.GTRegistration.REGISTRATE;
 import static com.gregtechceu.gtceu.utils.FormattingUtil.toEnglishName;
 
+@SuppressWarnings("unused")
 public class GTItems {
 
     //////////////////////////////////////
@@ -122,6 +125,7 @@ public class GTItems {
             .onRegister(materialInfo(new ItemMaterialInfo(new MaterialStack(GTMaterials.Steel, GTValues.M * 4))))
             .register();
 
+    @SuppressWarnings("unchecked")
     public static final ItemEntry<Item>[] SHAPE_MOLDS = new ItemEntry[18];
     public static final ItemEntry<Item> SHAPE_MOLD_PLATE;
     public static final ItemEntry<Item> SHAPE_MOLD_GEAR;
@@ -774,8 +778,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.PUMPS[0])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                        FormattingUtil.formatNumbers(1280 / 20)));
+                lines.add(fluidRateTooltip(GTValues.LV));
             })))
             .tag(CustomTags.ELECTRIC_PUMPS)
             .register();
@@ -785,8 +788,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.PUMPS[1])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                        FormattingUtil.formatNumbers(1280 * 4 / 20)));
+                lines.add(fluidRateTooltip(GTValues.MV));
             })))
             .tag(CustomTags.ELECTRIC_PUMPS)
             .register();
@@ -795,8 +797,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.PUMPS[2])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                        FormattingUtil.formatNumbers(1280 * 16 / 20)));
+                lines.add(fluidRateTooltip(GTValues.HV));
             })))
             .tag(CustomTags.ELECTRIC_PUMPS)
             .register();
@@ -805,8 +806,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.PUMPS[3])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                        FormattingUtil.formatNumbers(1280 * 64 / 20)));
+                lines.add(fluidRateTooltip(GTValues.EV));
             })))
             .tag(CustomTags.ELECTRIC_PUMPS)
             .register();
@@ -815,8 +815,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.PUMPS[4])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                        FormattingUtil.formatNumbers(1280 * 64 * 4 / 20)));
+                lines.add(fluidRateTooltip(GTValues.IV));
             })))
             .tag(CustomTags.ELECTRIC_PUMPS)
             .register();
@@ -826,8 +825,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.PUMPS[5])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                        FormattingUtil.formatNumbers(1280 * 64 * 16 / 20)));
+                lines.add(fluidRateTooltip(GTValues.LuV));
             })))
             .tag(CustomTags.ELECTRIC_PUMPS)
             .register();
@@ -837,8 +835,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.PUMPS[6])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                        FormattingUtil.formatNumbers(1280 * 64 * 64 / 20)));
+                lines.add(fluidRateTooltip(GTValues.ZPM));
             })))
             .tag(CustomTags.ELECTRIC_PUMPS)
             .register();
@@ -847,9 +844,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.PUMPS[7])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
-                lines.add(
-                        Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                                FormattingUtil.formatNumbers(1280 * 64 * 64 * 4 / 20)));
+                lines.add(fluidRateTooltip(GTValues.UV));
             })))
             .tag(CustomTags.ELECTRIC_PUMPS)
             .register();
@@ -860,8 +855,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.PUMPS[8])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                                1280 * 64 * 64 * 4 / 20));
+                        lines.add(fluidRateTooltip(GTValues.UHV));
                     })))
                     .register() :
             null;
@@ -872,8 +866,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.PUMPS[9])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                                1280 * 64 * 64 * 4 / 20));
+                        lines.add(fluidRateTooltip(GTValues.UEV));
                     })))
                     .register() :
             null;
@@ -884,8 +877,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.PUMPS[10])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                                1280 * 64 * 64 * 4 / 20));
+                        lines.add(fluidRateTooltip(GTValues.UIV));
                     })))
                     .register() :
             null;
@@ -896,8 +888,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.PUMPS[11])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                                1280 * 64 * 64 * 4 / 20));
+                        lines.add(fluidRateTooltip(GTValues.UXV));
                     })))
                     .register() :
             null;
@@ -908,8 +899,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.PUMPS[12])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                                1280 * 64 * 64 * 4 / 20));
+                        lines.add(fluidRateTooltip(GTValues.OpV));
                     })))
                     .register() :
             null;
@@ -920,7 +910,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.FLUID_REGULATORS[0])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate", 1280 / 20));
+                lines.add(fluidRateTooltip(GTValues.LV));
             })))
             .tag(CustomTags.FLUID_REGULATORS)
             .register();
@@ -930,7 +920,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.FLUID_REGULATORS[1])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate", 1280 * 4 / 20));
+                lines.add(fluidRateTooltip(GTValues.MV));
             })))
             .tag(CustomTags.FLUID_REGULATORS)
             .register();
@@ -940,7 +930,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.FLUID_REGULATORS[2])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate", 1280 * 16 / 20));
+                lines.add(fluidRateTooltip(GTValues.HV));
             })))
             .tag(CustomTags.FLUID_REGULATORS)
             .register();
@@ -950,7 +940,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.FLUID_REGULATORS[3])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate", 1280 * 64 / 20));
+                lines.add(fluidRateTooltip(GTValues.EV));
             })))
             .tag(CustomTags.FLUID_REGULATORS)
             .register();
@@ -960,7 +950,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.FLUID_REGULATORS[4])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate", 1280 * 64 * 4 / 20));
+                lines.add(fluidRateTooltip(GTValues.IV));
             })))
             .tag(CustomTags.FLUID_REGULATORS)
             .register();
@@ -970,7 +960,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.FLUID_REGULATORS[5])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate", 1280 * 64 * 16 / 20));
+                lines.add(fluidRateTooltip(GTValues.LuV));
             })))
             .tag(CustomTags.FLUID_REGULATORS)
             .register();
@@ -980,7 +970,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.FLUID_REGULATORS[6])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate", 1280 * 64 * 64 / 20));
+                lines.add(fluidRateTooltip(GTValues.ZPM));
             })))
             .tag(CustomTags.FLUID_REGULATORS)
             .register();
@@ -990,8 +980,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.FLUID_REGULATORS[7])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
-                lines.add(
-                        Component.translatable("common.gtceu.tooltip.fluid_transfer_rate", 1280 * 64 * 64 * 4 / 20));
+                lines.add(fluidRateTooltip(GTValues.UV));
             })))
             .tag(CustomTags.FLUID_REGULATORS)
             .register();
@@ -1001,8 +990,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.FLUID_REGULATORS[8])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                                1280 * 64 * 64 * 4 / 20));
+                        lines.add(fluidRateTooltip(GTValues.UHV));
                     })))
                     .register() :
             null;
@@ -1012,8 +1000,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.FLUID_REGULATORS[9])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                                1280 * 64 * 64 * 4 / 20));
+                        lines.add(fluidRateTooltip(GTValues.UEV));
                     })))
                     .register() :
             null;
@@ -1023,8 +1010,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.FLUID_REGULATORS[10])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                                1280 * 64 * 64 * 4 / 20));
+                        lines.add(fluidRateTooltip(GTValues.UIV));
                     })))
                     .register() :
             null;
@@ -1034,8 +1020,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.FLUID_REGULATORS[11])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                                1280 * 64 * 64 * 4 / 20));
+                        lines.add(fluidRateTooltip(GTValues.UXV));
                     })))
                     .register() :
             null;
@@ -1045,8 +1030,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.FLUID_REGULATORS[12])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
-                                1280 * 64 * 64 * 4 / 20));
+                        lines.add(fluidRateTooltip(GTValues.OpV));
                     })))
                     .register() :
             null;
@@ -1063,7 +1047,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.CONVEYORS[0])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate", 8));
+                lines.add(itemRateTooltip(GTValues.LV));
             })))
             .tag(CustomTags.CONVEYOR_MODULES)
             .register();
@@ -1073,7 +1057,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.CONVEYORS[1])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate", 32));
+                lines.add(itemRateTooltip(GTValues.MV));
             })))
             .tag(CustomTags.CONVEYOR_MODULES)
             .register();
@@ -1083,7 +1067,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.CONVEYORS[2])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate", 64));
+                lines.add(itemRateTooltip(GTValues.HV));
             })))
             .tag(CustomTags.CONVEYOR_MODULES)
             .register();
@@ -1093,7 +1077,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.CONVEYORS[3])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 3));
+                lines.add(itemRateTooltip(GTValues.EV));
             })))
             .tag(CustomTags.CONVEYOR_MODULES)
             .register();
@@ -1103,7 +1087,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.CONVEYORS[4])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 8));
+                lines.add(itemRateTooltip(GTValues.IV));
             })))
             .tag(CustomTags.CONVEYOR_MODULES)
             .register();
@@ -1113,7 +1097,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.CONVEYORS[5])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                lines.add(itemRateTooltip(GTValues.LuV));
             })))
             .tag(CustomTags.CONVEYOR_MODULES)
             .register();
@@ -1123,7 +1107,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.CONVEYORS[6])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                lines.add(itemRateTooltip(GTValues.ZPM));
             })))
             .tag(CustomTags.CONVEYOR_MODULES)
             .register();
@@ -1133,7 +1117,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.CONVEYORS[7])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                lines.add(itemRateTooltip(GTValues.UV));
             })))
             .tag(CustomTags.CONVEYOR_MODULES)
             .register();
@@ -1143,7 +1127,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.CONVEYORS[8])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                        lines.add(itemRateTooltip(GTValues.UHV));
                     })))
                     .register() :
             null;
@@ -1153,7 +1137,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.CONVEYORS[9])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                        lines.add(itemRateTooltip(GTValues.UEV));
                     })))
                     .register() :
             null;
@@ -1163,7 +1147,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.CONVEYORS[10])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                        lines.add(itemRateTooltip(GTValues.UIV));
                     })))
                     .register() :
             null;
@@ -1173,7 +1157,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.CONVEYORS[11])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                        lines.add(itemRateTooltip(GTValues.UXV));
                     })))
                     .register() :
             null;
@@ -1183,7 +1167,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.CONVEYORS[12])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                        lines.add(itemRateTooltip(GTValues.OpV));
                     })))
                     .register() :
             null;
@@ -1246,7 +1230,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.ROBOT_ARMS[0])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate", 8));
+                lines.add(itemRateTooltip(GTValues.LV));
             })))
             .tag(CustomTags.ROBOT_ARMS)
             .register();
@@ -1255,7 +1239,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.ROBOT_ARMS[1])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate", 32));
+                lines.add(itemRateTooltip(GTValues.MV));
             })))
             .tag(CustomTags.ROBOT_ARMS)
             .register();
@@ -1264,7 +1248,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.ROBOT_ARMS[2])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate", 64));
+                lines.add(itemRateTooltip(GTValues.HV));
             })))
             .tag(CustomTags.ROBOT_ARMS)
             .register();
@@ -1273,7 +1257,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.ROBOT_ARMS[3])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 3));
+                lines.add(itemRateTooltip(GTValues.EV));
             })))
             .tag(CustomTags.ROBOT_ARMS)
             .register();
@@ -1282,7 +1266,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.ROBOT_ARMS[4])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 8));
+                lines.add(itemRateTooltip(GTValues.IV));
             })))
             .tag(CustomTags.ROBOT_ARMS)
             .register();
@@ -1291,7 +1275,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.ROBOT_ARMS[5])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                lines.add(itemRateTooltip(GTValues.LuV));
             })))
             .tag(CustomTags.ROBOT_ARMS)
             .register();
@@ -1300,7 +1284,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.ROBOT_ARMS[6])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                lines.add(itemRateTooltip(GTValues.ZPM));
             })))
             .tag(CustomTags.ROBOT_ARMS)
             .register();
@@ -1309,7 +1293,7 @@ public class GTItems {
             .onRegister(attach(new CoverPlaceBehavior(GTCovers.ROBOT_ARMS[7])))
             .onRegister(attach(new TooltipBehavior(lines -> {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
-                lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                lines.add(itemRateTooltip(GTValues.UV));
             })))
             .tag(CustomTags.ROBOT_ARMS)
             .register();
@@ -1319,7 +1303,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.ROBOT_ARMS[8])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                        lines.add(itemRateTooltip(GTValues.UHV));
                     })))
                     .register() :
             null;
@@ -1329,7 +1313,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.ROBOT_ARMS[9])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                        lines.add(itemRateTooltip(GTValues.UEV));
                     })))
                     .register() :
             null;
@@ -1339,7 +1323,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.ROBOT_ARMS[10])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                        lines.add(itemRateTooltip(GTValues.UIV));
                     })))
                     .register() :
             null;
@@ -1349,7 +1333,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.ROBOT_ARMS[11])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                        lines.add(itemRateTooltip(GTValues.UXV));
                     })))
                     .register() :
             null;
@@ -1359,7 +1343,7 @@ public class GTItems {
                     .onRegister(attach(new CoverPlaceBehavior(GTCovers.ROBOT_ARMS[12])))
                     .onRegister(attach(new TooltipBehavior(lines -> {
                         lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
-                        lines.add(Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", 16));
+                        lines.add(itemRateTooltip(GTValues.OpV));
                     })))
                     .register() :
             null;
@@ -1510,17 +1494,18 @@ public class GTItems {
             .lang("Data Module").onRegister(attach(new DataItemBehavior(true, 256)))
             .register();
 
-    public static final Map<MarkerMaterial, ItemEntry<Item>> GLASS_LENSES = new HashMap<>();
+    public static final Map<DyeColor, ItemEntry<Item>> GLASS_LENSES = new HashMap<>();
 
     static {
-        for (int i = 0; i < MarkerMaterials.Color.VALUES.length; i++) {
-            MarkerMaterial color = MarkerMaterials.Color.VALUES[i];
-            if (color != MarkerMaterials.Color.White) {
-                GLASS_LENSES.put(color, REGISTRATE.item(String.format("%s_glass_lens", color.getName()), Item::new)
-                        .lang("Glass Lens (%s)".formatted(toEnglishName(color.getName())))
-                        .transform(unificationItem(TagPrefix.lens, color))
-                        .register());
-            }
+
+        for (DyeColor color : DyeColor.values()) {
+            if (color == DyeColor.WHITE) continue;
+            GLASS_LENSES.put(color,
+                    REGISTRATE.item(String.format("%s_glass_lens", color.getName()), Item::new)
+                            .lang("Glass Lens (%s)".formatted(toEnglishName(color.getName())))
+                            .tag(CustomTags.LENSES, CustomTags.GLASS_LENS)
+                            .tag(TagUtil.createItemTag("lenses/" + color.getName()))
+                            .register());
         }
     }
 
@@ -1992,7 +1977,7 @@ public class GTItems {
     public static ItemEntry<ComponentItem> ITEM_FILTER = REGISTRATE.item("item_filter", ComponentItem::create)
             .setData(ProviderType.LANG, nameAndMultilineTooltipLang("Item Filter",
                     "§7Filters §fItem§7 I/O as §fCover§7.\nCan be used as a §fConveyor Module§7 and §fRobotic Arm§7 upgrade."))
-            .onRegister(attach(new ItemFilterBehaviour(SimpleItemFilter::loadFilter),
+            .onRegister(attach(new FilterBehaviour<>(ItemStack.class, SimpleItemFilter::new),
                     new CoverPlaceBehavior(GTCovers.ITEM_FILTER)))
             .onRegister(materialInfo(new ItemMaterialInfo(new MaterialStack(GTMaterials.Zinc, GTValues.M * 2),
                     new MaterialStack(GTMaterials.Steel, GTValues.M))))
@@ -2001,7 +1986,9 @@ public class GTItems {
             .item("item_tag_filter", ComponentItem::create)
             .setData(ProviderType.LANG, nameAndMultilineTooltipLang("Item Tag Filter",
                     "§7Filters §fItem§7 I/O with §fItem Tags§7 as §fCover§7.\nCan be used as a §fConveyor Module§7 and §fRobotic Arm§7 upgrade."))
-            .onRegister(attach(new ItemFilterBehaviour(TagItemFilter::loadFilter),
+            .onRegister(attach(
+                    new FilterBehaviour<>(ItemStack.class,
+                            stack -> new TagFilter<>(stack, ItemStack::getItem, ItemStack::getTags)),
                     new CoverPlaceBehavior(GTCovers.ITEM_FILTER)))
             .onRegister(materialInfo(new ItemMaterialInfo(new MaterialStack(GTMaterials.Zinc, GTValues.M * 2))))
             .register();
@@ -2009,23 +1996,41 @@ public class GTItems {
             .item("item_smart_filter", ComponentItem::create)
             .setData(ProviderType.LANG, nameAndMultilineTooltipLang("Smart Item Filter",
                     "§7Filters §fItem§7 I/O with §fMachine Recipes§7 as §fCover§7.\nCan be used as a §fConveyor Module§7 and §fRobotic Arm§7 upgrade."))
-            .onRegister(attach(new ItemFilterBehaviour(SmartItemFilter::loadFilter),
+            .onRegister(attach(new FilterBehaviour<>(ItemStack.class, SmartItemFilter::new),
                     new CoverPlaceBehavior(GTCovers.ITEM_FILTER)))
             .onRegister(materialInfo(new ItemMaterialInfo(new MaterialStack(GTMaterials.Zinc, GTValues.M * 3 / 2))))
             .register();
     public static ItemEntry<ComponentItem> FLUID_FILTER = REGISTRATE.item("fluid_filter", ComponentItem::create)
             .setData(ProviderType.LANG, nameAndMultilineTooltipLang("Fluid Filter",
                     "§7Filters §fFluid§7 I/O as §fCover§7.\nCan be used as a §fElectric Pump§7 and §fFluid Regulator§7 upgrade."))
-            .onRegister(attach(new FluidFilterBehaviour(SimpleFluidFilter::loadFilter),
+            .onRegister(attach(new FilterBehaviour<>(FluidStack.class, SimpleFluidFilter::new),
                     new CoverPlaceBehavior(GTCovers.FLUID_FILTER)))
             .onRegister(materialInfo(new ItemMaterialInfo(new MaterialStack(GTMaterials.Zinc, GTValues.M * 2))))
             .register();
     public static ItemEntry<ComponentItem> TAG_FLUID_FILTER = REGISTRATE.item("fluid_tag_filter", ComponentItem::create)
             .setData(ProviderType.LANG, nameAndMultilineTooltipLang("Fluid Tag Filter",
                     "§7Filters §fFluid§7 I/O with §fFluid Tags§7 as §fCover§7.\nCan be used as a §fElectric Pump§7 and §fFluid Regulator§7 upgrade."))
-            .onRegister(attach(new FluidFilterBehaviour(TagFluidFilter::loadFilter),
+            .onRegister(attach(
+                    new FilterBehaviour<>(FluidStack.class, stack -> new TagFilter<>(stack, FluidStack::getFluid,
+                            f -> f.getFluid().defaultFluidState().getTags())),
                     new CoverPlaceBehavior(GTCovers.FLUID_FILTER)))
             .onRegister(materialInfo(new ItemMaterialInfo(new MaterialStack(GTMaterials.Zinc, GTValues.M * 3 / 2))))
+            .register();
+
+    public static ItemEntry<ComponentItem> COMPOSITE_ITEM_FILTER = REGISTRATE
+            .item("composite_item_filter", ComponentItem::create)
+            .lang("Composite Item Filter")
+            .onRegister(attach(
+                    new FilterBehaviour<>(ItemStack.class, stack -> new CompositeFilter<>(stack, ItemStack.class)),
+                    new CoverPlaceBehavior(GTCovers.ITEM_FILTER)))
+            .register();
+
+    public static ItemEntry<ComponentItem> COMPOSITE_FLUID_FILTER = REGISTRATE
+            .item("composite_fluid_filter", ComponentItem::create)
+            .lang("Composite Fluid Filter")
+            .onRegister(attach(
+                    new FilterBehaviour<>(FluidStack.class, stack -> new CompositeFilter<>(stack, FluidStack.class)),
+                    new CoverPlaceBehavior(GTCovers.ITEM_FILTER)))
             .register();
 
     public static ItemEntry<ComponentItem> COVER_WIRELESS_TRANSMITTER = REGISTRATE
@@ -2458,16 +2463,15 @@ public class GTItems {
             .onRegister(attach(new MachineConfigCopyBehaviour()))
             .register();
 
-    public static final ItemEntry<DyeItem>[] DYE_ONLY_ITEMS = new ItemEntry[DyeColor.values().length];
+    public static final Map<DyeColor, ItemEntry<DyeItem>> CHEMICAL_DYES = new Object2ObjectOpenHashMap<>();
     static {
-        DyeColor[] colors = DyeColor.values();
-        for (int i = 0; i < colors.length; i++) {
-            var dyeColor = colors[i];
-            DYE_ONLY_ITEMS[i] = REGISTRATE
-                    .item("chemical_%s_dye".formatted(dyeColor.getName()), (props) -> new DyeItem(dyeColor, props))
-                    .lang("Chemical %s Dye".formatted(toEnglishName(dyeColor.getName())))
-                    .tag(TagUtil.createItemTag("dyes/" + dyeColor.getName()))
-                    .register();
+        for (DyeColor color : DyeColor.values()) {
+            CHEMICAL_DYES.put(color, REGISTRATE
+                    .item("chemical_%s_dye".formatted(color.getName()), (props) -> new DyeItem(color, props))
+                    .lang("Chemical %s Dye".formatted(toEnglishName(color.getName())))
+                    .tag(Tags.Items.DYES)
+                    .tag(color.getTag())
+                    .register());
         }
     }
 
@@ -2842,6 +2846,48 @@ public class GTItems {
             .onRegister(attach(new GuiModuleBehaviour()))
             .register();
 
+    public static ItemEntry<Item> SPOILABLE_1;
+    public static ItemEntry<Item> SPOILABLE_2;
+    public static ItemEntry<Item> SPOILABLE_3;
+    public static ItemEntry<Item> SPOILABLE_4;
+    public static ItemEntry<Item> SPOILABLE_5;
+    public static ItemEntry<Item> ENTITY_SPOILABLE;
+
+    static {
+        if (GTCEu.isDev()) {
+            SPOILABLE_1 = REGISTRATE.item("spoilable_1", Item::new)
+                    .lang("Spoilable 1")
+                    .register();
+            SPOILABLE_2 = REGISTRATE.item("spoilable_2", Item::new)
+                    .lang("Spoilable 2")
+                    .register();
+            SPOILABLE_3 = REGISTRATE.item("spoilable_3", Item::new)
+                    .lang("Spoilable 3")
+                    .register();
+            SPOILABLE_4 = REGISTRATE.item("spoilable_4", Item::new)
+                    .lang("Spoilable 4")
+                    .register();
+            SPOILABLE_5 = REGISTRATE.item("spoilable_5", Item::new)
+                    .lang("Spoilable 5")
+                    .register();
+            ENTITY_SPOILABLE = REGISTRATE.item("entity_spoilable", Item::new)
+                    .lang("Entity Spoilable")
+                    .register();
+        }
+    }
+
+    public static ItemEntry<ComponentItem> MAGNETIC_GOLDEN_CARROT = REGISTRATE
+            .item("magnetic_golden_carrot", ComponentItem::create)
+            .lang("Magnetic Golden Carrot")
+            .onRegister(attach(new FoodStats(new FoodProperties.Builder()
+                    .nutrition(Foods.GOLDEN_CARROT.getNutrition())
+                    .saturationMod(Foods.GOLDEN_CARROT.getSaturationModifier())
+                    .effect(() -> new MobEffectInstance(MobEffects.DIG_SPEED, 20 * 60 * 10, 1), 1)
+                    .fast()
+                    .alwaysEat()
+                    .build())))
+            .register();
+
     public static void init() {
         GTMaterialItems.generateMaterialItems();
         GTMaterialItems.generateTools();
@@ -2953,10 +2999,24 @@ public class GTItems {
         };
     }
 
+    @SuppressWarnings("RedundantCast")
     public static void registerToolTier(MaterialToolTier tier, ResourceLocation id, Collection<ResourceLocation> before,
                                         Collection<ResourceLocation> after) {
         TierSortingRegistry.registerTier(tier, id, Arrays.asList((Object[]) before.toArray(ResourceLocation[]::new)),
                 Arrays.asList((Object[]) after.toArray(ResourceLocation[]::new)));
+    }
+
+    private static Component itemRateTooltip(int tier) {
+        var itemsPerSecond = ConveyorCover.CONVEYOR_SCALING.applyAsInt(tier);
+        return itemsPerSecond > 64 ?
+                Component.translatable("common.gtceu.tooltip.item_transfer_rate_stacks", itemsPerSecond / 64) :
+                Component.translatable("common.gtceu.tooltip.item_transfer_rate", itemsPerSecond);
+    }
+
+    private static Component fluidRateTooltip(int tier) {
+        var mbPerTick = PumpCover.PUMP_SCALING.applyAsInt(tier);
+        return Component.translatable("common.gtceu.tooltip.fluid_transfer_rate",
+                FormattingUtil.formatNumbers(mbPerTick));
     }
 
     public static ResourceLocation getTierName(Tier tier) {
